namespace lab3;
public interface Road
{
    void Go();
}

public interface Sky
{
    void Go();
}
